scrollbar fixed

--- a/src/main.css
+++ b/src/main.css
@@ -189,6 +189,17 @@ body {
 
 
 
+::-webkit-scrollbar {
+
+  background: #130bfb00;
+}
+
+::-webkit-scrollbar-thumb{
+
+  background: #bbad95;
+}
+
+
 
 
 
